# Process this file with autoconf to produce a configure script.
AC_INIT(Loci, 1.0, lush@erc.msstate.edu)
AC_CONFIG_SRCDIR([config.h.in])
AM_INIT_AUTOMAKE(Loci, 1.0)
#AC_CONFIG_HEADER([config.h])
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_CPP
AC_PROG_RANLIB
SH_CC_PIC
SH_CXX_PIC
SH_ARCH

# Checks for GCC 2.95 workarounds
SH_GCC_FIXES
SH_GCC_HASH_MAP

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
#AC_CHECK_HEADERS([fcntl.h stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CXX_NAMESPACES
AC_CXX_HAVE_STD
AC_CXX_BOOL
AC_CXX_TYPENAME
AC_CXX_MEMBER_TEMPLATES
AC_CXX_PARTIAL_ORDERING
AC_CXX_PARTIAL_SPECIALIZATION
AC_CXX_TEMPLATES_AS_TEMPLATE_ARGUMENTS

# Checks for library functions.
# AC_FUNC_MALLOC # Why comment this out?  Because certain tests fail when we try to load libhdf5.so
ETR_SOCKET_NSL
AC_CHECK_LIB(m,sqrt) # We HAVE to have -lm on the link line for pretty much everything to link properly.  Within CHECK_* there is a call to AC_CHECK_LIB for the appropriate library and at that time, we could specify -lm as an optional library for linking with $* but that requires specifying the actions to carry out if $* is (not) found and I don't want to change from the default.  Basically, AC_CHECK_LIB takes optional libraries last in its argument list and default arguments behave as in C++; we want intermediate defaults, not trailing defaults.
AC_CHECK_LIB(z,inflate) # HDF5 requires zlib to be linked in, so add it to the link line
CHECK_MPI
CHECK_METIS
CHECK_PARMETIS
CHECK_HDF5

AC_TYPE_SIGNAL
AC_FUNC_STAT

AC_CONFIG_FILES([Makefile
                 System/Makefile
                 Tools/Makefile
								 conf/Makefile
								 include/Makefile
								 include/Tools/Makefile
								 include/g++-fixes/Makefile
								 include/Config/Makefile
								 ])
AC_OUTPUT
