INCLUDES = -I$(top_srcdir)/include

lib_LIBRARIES = libLoci.a 


libLoci_a_SOURCES = DMap.cc comp_dag.cc distribute.cc sched_decompose.cc DMultiMap.cc comp_impl.cc execute.cc sched_mlg.cc Loci_Datatypes.cc comp_internal.cc fact_db.cc sched_mlg.h Loci_version.cc comp_loop.cc hdf5_readwrite.cc sched_tools.cc Makefile.original comp_recurse.cc sched_tools.h comp_reduce.cc param_rule.cc sched_types.cc comp_tools.cc scheduler.cc comp_tools.h rule.cc store_rep.cc Map.cc constraint.cc sched_comp.cc variable.cc comp_cond.cc depend_graph.cc sched_db.cc metis.h parmetis.h

